; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mvs/extr_mvs.c_mvs_ch_resume.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mvs/extr_mvs.c_mvs_ch_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mvs_channel = type { i32, i32 }

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @mvs_ch_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mvs_ch_resume(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mvs_channel*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.mvs_channel* @device_get_softc(i32 %4)
  store %struct.mvs_channel* %5, %struct.mvs_channel** %3, align 8
  %6 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %7 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %6, i32 0, i32 0
  %8 = call i32 @mtx_lock(i32* %7)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @mvs_ch_init(i32 %9)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @mvs_reset(i32 %11)
  %13 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %14 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @TRUE, align 4
  %17 = call i32 @xpt_release_simq(i32 %15, i32 %16)
  %18 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %19 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %18, i32 0, i32 0
  %20 = call i32 @mtx_unlock(i32* %19)
  ret i32 0
}

declare dso_local %struct.mvs_channel* @device_get_softc(i32) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mvs_ch_init(i32) #1

declare dso_local i32 @mvs_reset(i32) #1

declare dso_local i32 @xpt_release_simq(i32, i32) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
